More abstraction & changes in notebook structure
- Explicit steps in encoding text into tokens (character-base)
- Abstract away non-student changes like token mapping

--- a/exercise-3-name/solution/text-generation.ipynb
+++ b/exercise-3-name/solution/text-generation.ipynb
@@ -7,34 +7,19 @@
    "outputs": [],
    "source": [
     "from __future__ import annotations\n",
-    "from collections.abc import Sequence\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
-    "from collections import Counter\n",
-    "from torch.utils.data import DataLoader"
+    "from torch.utils.data import DataLoader\n",
+    "from transformers import AutoTokenizer\n",
+    "\n",
+    "from helper import *"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from helper import (\n",
-    "    ShakespeareDataset,\n",
-    "    start_time,\n",
-    "    time_since,\n",
-    "    build_model,\n",
-    "    tokens_to_index_tensor,\n",
-    "    tokenize_text,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -127,11 +112,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalize_text(text: str) -> str:\n",
+    "    # Can be multiple actions to normalize text\n",
+    "    normalized_text = text.lower()\n",
+    "    return normalized_text"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "shakespeare_text = raw_text.lower()"
+    "normalized_text = normalize_text(raw_text)"
    ]
   },
   {
@@ -147,15 +144,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "char2idx = {\n",
-    "    char: idx\n",
-    "    for idx, (char, _) in enumerate(Counter(shakespeare_text).items())\n",
-    "}\n",
-    "\n",
-    "idx2char = {\n",
-    "    idx: char\n",
-    "    for char, idx in char2idx.items()\n",
-    "}"
+    "def pretokenize_text(text: str) -> list[str]:\n",
+    "    smaller_pieces = [char for char in text]\n",
+    "    return smaller_pieces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shakespeare_text = pretokenize_text(normalized_text)"
    ]
   },
   {
@@ -167,12 +167,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "character_mapping = TokenMapping(shakespeare_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "encoded = [\n",
-    "    char2idx[char] for char in shakespeare_text\n",
+    "    character_mapping.token2index[char]\n",
+    "    for char in shakespeare_text\n",
     "]"
    ]
   },
@@ -194,17 +204,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_tokens = len(char2idx)\n",
+    "n_tokens = character_mapping.n_tokens\n",
     "dataset_size = len(encoded)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +271,7 @@
     "    generated_text = input_str.lower()\n",
     "    input_tensor = tokens_to_index_tensor(\n",
     "        tokens=input_str.lower(),\n",
-    "        token_index_mapping=char2idx,\n",
+    "        token_index_mapping=character_mapping.token2index,\n",
     "    )\n",
     "    \n",
     "    with torch.no_grad():\n",
@@ -272,7 +282,7 @@
     "                dim=0,\n",
     "            )\n",
     "            next_char_idx = torch.multinomial(probabilities, 1).item()\n",
-    "            generated_text += idx2char[next_char_idx]\n",
+    "            generated_text += character_mapping.index2token[next_char_idx]\n",
     "            input_tensor = torch.cat(\n",
     "                [\n",
     "                    input_tensor,\n",
@@ -293,48 +303,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 2.259148428843806\n",
-      "[00m 6.2s (0 0%) 1.7822]\n",
+      "Epoch 1/5, Loss: 2.264691512500897\n",
+      "[00m 6.4s (0 0%) 2.1262]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be hat, the lid this hace thay lot allde gofen to dethor hae our spingseled o' thaa: mose pome,\n",
-      "to vab\n",
-      "Epoch 2/5, Loss: 1.9099794088461148\n",
-      "[00m 12.5s (1 20%) 1.7914]\n",
+      "to be or not to be to a u;s: won.\n",
+      "\n",
+      "lantherat in iide. hate.\n",
+      "\n",
+      "fond a wist the dcith ingle.\n",
+      "\n",
+      "sifkersy noles of a,\n",
+      "boy i \n",
+      "Epoch 2/5, Loss: 1.9142016943270406\n",
+      "[00m 12.9s (1 20%) 1.6515]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be it acounstis of vepory the the brutus:\n",
-      "you tho bliens on i gomst comefs ith and goon it the first y\n",
-      "Epoch 3/5, Loss: 1.8243300361755177\n",
-      "[00m 18.8s (2 40%) 1.6895]\n",
+      "to be or not to beemeneting; to hercesary. thinetry dift dit the now verfens:\n",
+      "ansted i do gatior, yet marcius:\n",
+      "that ga\n",
+      "Epoch 3/5, Loss: 1.829020601948991\n",
+      "[00m 19.3s (2 40%) 1.6953]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to betor's dell.\n",
-      "\n",
-      "\n",
-      "firs sodes mare fill you of nfen cantond.\n",
-      "\n",
-      "firsterioue i' tha onanius.\n",
-      "\n",
-      "auphfished on \n",
-      "Epoch 4/5, Loss: 1.7824568124624869\n",
-      "[00m 25.1s (3 60%) 1.6199]\n",
+      "to be or not to bear bele being dto shal ot\n",
+      "he coprich\n",
+      "i gok fulk ane heqhy;\n",
+      "will hearinius sessidius:\n",
+      "whis to stave h\n",
+      "Epoch 4/5, Loss: 1.7857095245355235\n",
+      "[00m 26.1s (3 60%) 1.5915]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to beat varcidicition are belear found waus:\n",
-      "one make\n",
-      "yours: us, your neart dhaingring romcur his tit evo\n",
-      "Epoch 5/5, Loss: 1.7558585542459457\n",
-      "[00m 31.4s (4 80%) 1.7886]\n",
-      "------------------------------------------------------------------------\n",
-      "to be or not to be thou mamcie: to. the condou worselist for all prutubleria: faces their sour.\n",
+      "to be or not to beod store would on me, fands!\n",
+      "ip of he orere cimines:\n",
+      "to soctreaber.\n",
       "\n",
-      "memands\n",
-      "comting,\n",
-      "ay h\n"
+      "moneselfour thoust leat, i him,\n",
+      "Epoch 5/5, Loss: 1.7595997725051051\n",
+      "[00m 32.5s (4 80%) 1.8310]\n",
+      "------------------------------------------------------------------------\n",
+      "to be or not to bepting deser marcius waftly shut, your may to preed, you, with.\n",
+      "\n",
+      "cominius:\n",
+      "you thou:\n",
+      "heard, madind, m\n"
      ]
     }
    ],
@@ -370,16 +386,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "to be or not to bellable the warpes\n",
-      "thoug. had say, haak, deedst more's to uspts not the him res thrigur a\n",
-      "woldonor ou\n"
+      "to be or not to bepetince this ance,\n",
+      "fut, and in hine\n",
+      "the comperce the my hl't buther, wherety,\n",
+      "speats the mores, and \n"
      ]
     }
    ],
@@ -396,16 +413,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from torch.utils.data import DataLoader\n",
-    "from transformers import AutoTokenizer"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -416,16 +423,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tokenize (Choose)\n",
-    "- Normalization\n",
-    "- Pretokenization\n",
-    "- Tokenize\n",
-    "- Postprocessing"
+    "### Tokenize (Choose)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,15 +458,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "token2idx = {token: idx for idx, (token, _) in enumerate(Counter(shakespeare_text).items())}\n",
-    "idx2token = {idx: token for token, idx in token2idx.items()}\n",
-    "encoded = [token2idx[token] for token in shakespeare_text]\n",
-    "n_tokens = len(token2idx)\n",
-    "dataset_size = len(encoded)"
+    "token_mapping = TokenMapping(shakespeare_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoded = [\n",
+    "    token_mapping.token2index[char]\n",
+    "    for char in shakespeare_text\n",
+    "]"
    ]
   },
   {
@@ -475,17 +486,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_tokens = len(token2idx)\n",
+    "n_tokens = token_mapping.n_tokens\n",
     "dataset_size = len(encoded)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +554,7 @@
     "    tokenized_text = tokenize_text(tokenizer=tokenizer, text=input_str)\n",
     "    input_tensor = tokens_to_index_tensor(\n",
     "        tokens=tokenized_text,\n",
-    "        token_index_mapping=token2idx,\n",
+    "        token_index_mapping=token_mapping.token2index,\n",
     "    )\n",
     "\n",
     "    generated_text = []\n",
@@ -555,7 +566,7 @@
     "                dim=0,\n",
     "            )\n",
     "            next_token_idx = torch.multinomial(probabilities, 1).item()\n",
-    "            generated_text.append(idx2token[next_token_idx])\n",
+    "            generated_text.append(token_mapping.index2token[next_token_idx])\n",
     "            input_tensor = torch.cat(\n",
     "                [\n",
     "                    input_tensor,\n",
@@ -578,33 +589,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 6.209641674290532\n",
-      "[00m 2.7s (0 0%) 5.7561]\n",
+      "Epoch 1/5, Loss: 6.16962888351032\n",
+      "[00m 2.8s (0 0%) 5.1410]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be , pin first with it one - thato though mean itmen city : this't, dissent : than citizen [SEP] where pre but task and acc\n",
-      "Epoch 2/5, Loss: 5.377411510633386\n",
-      "[00m 5.6s (1 20%) 5.3217]\n",
+      "To be or not to be ##her south let. : br soldier speak while'oak run some you assembly that ; good they you! hat girons beingach in.rio rather\n",
+      "Epoch 2/5, Loss: 5.364991634721593\n",
+      "[00m 5.6s (1 20%) 4.9285]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be man : garland'gains : a enemy. la menuck, what praise the and trumpetsriolan door we at little lovedjo in who thirst do\n",
-      "Epoch 3/5, Loss: 4.812482122061909\n",
-      "[00m 8.4s (2 40%) 5.0367]\n",
+      "To be or not to be ##uss let hearts. aidi i will retire of have, a goo rather,, to of have ; behind mills. far thousands they artpt\n",
+      "Epoch 3/5, Loss: 4.842905401893486\n",
+      "[00m 8.4s (2 40%) 4.1508]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be t attend know he is! come,'d marcius : there, hoenius : large, and doubt for my plaster he [SEP] l friends\n",
-      "Epoch 4/5, Loss: 4.416869077705531\n",
-      "[00m 11.2s (3 60%) 4.4550]\n",
+      "To be or not to be pray choice of slain, which remain i'll not threeers! theyinius : tell express vols to relieve fools a : nos, who\n",
+      "Epoch 4/5, Loss: 4.4670529794809015\n",
+      "[00m 11.2s (3 60%) 4.1122]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be very as - - coriolanus : therefore : where you os. marcius, rome you. volrti think, i [SEP] ian hence,\n",
-      "Epoch 5/5, Loss: 4.099509870372533\n",
-      "[00m 14.2s (4 80%) 4.0907]\n",
+      "To be or not to be des sp subjects have first citizen : less's er patricia for our hislanus : we shall, his which to mo. keepers. marcidi\n",
+      "Epoch 5/5, Loss: 4.1650441806681835\n",
+      "[00m 14.0s (4 80%) 3.8798]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be complexion off alikedue thin have be content you below foolish none you fool should it wasuitlier up and terrible matter, because ay, if well\n"
+      "To be or not to be must set their caps more the your lord of their disciplined. second better it hand patience confess, madam, my seem the af hours made, what we\n"
      ]
     }
    ],
@@ -639,14 +650,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To be or not to be brave fathers abundant ; that we shall you are since flower have on, we! bold stink at the world that pair hate, that'lamb double the\n"
+      "To be or not to be carrythling can's their wholesomeaves, which like you : alone forth, his brows honour me the gentry horse a net, him alone\n"
      ]
     }
    ],
