Method to encode token strings to IDs (integers)

--- a/exercise-3-name/solution/text-generation.ipynb
+++ b/exercise-3-name/solution/text-generation.ipynb
@@ -180,10 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "encoded = [\n",
-    "    character_mapping.token2index[char]\n",
-    "    for char in shakespeare_text\n",
-    "]"
+    "encoded = character_mapping.encode(shakespeare_text)"
    ]
   },
   {
@@ -310,47 +307,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 2.264691512500897\n",
-      "[00m 6.4s (0 0%) 2.1262]\n",
+      "Epoch 1/5, Loss: 2.267284755661084\n",
+      "[00m 6.2s (0 0%) 2.2403]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be to a u;s: won.\n",
-      "\n",
-      "lantherat in iide. hate.\n",
-      "\n",
-      "fond a wist the dcith ingle.\n",
-      "\n",
-      "sifkersy noles of a,\n",
-      "boy i \n",
-      "Epoch 2/5, Loss: 1.9142016943270406\n",
-      "[00m 12.9s (1 20%) 1.6515]\n",
+      "to be or not to beinfeed, fases, fobven lat and reat's a marn's,\n",
+      "them your sil thusester the lent, we efirs and as i t\n",
+      "Epoch 2/5, Loss: 1.9004900568971237\n",
+      "[00m 12.7s (1 20%) 1.7704]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to beemeneting; to hercesary. thinetry dift dit the now verfens:\n",
-      "ansted i do gatior, yet marcius:\n",
-      "that ga\n",
-      "Epoch 3/5, Loss: 1.829020601948991\n",
-      "[00m 19.3s (2 40%) 1.6953]\n",
-      "------------------------------------------------------------------------\n",
-      "to be or not to bear bele being dto shal ot\n",
-      "he coprich\n",
-      "i gok fulk ane heqhy;\n",
-      "will hearinius sessidius:\n",
-      "whis to stave h\n",
-      "Epoch 4/5, Loss: 1.7857095245355235\n",
-      "[00m 26.1s (3 60%) 1.5915]\n",
-      "------------------------------------------------------------------------\n",
-      "to be or not to beod store would on me, fands!\n",
-      "ip of he orere cimines:\n",
-      "to soctreaber.\n",
+      "to be or not to be toonsed forth?\n",
       "\n",
-      "moneselfour thoust leat, i him,\n",
-      "Epoch 5/5, Loss: 1.7595997725051051\n",
-      "[00m 32.5s (4 80%) 1.8310]\n",
+      "aufinius:\n",
+      "be asingiemnien:\n",
+      "thouve sy, ble make all you dome,\n",
+      "you beter: he enow\n",
+      "how\n",
+      "Epoch 3/5, Loss: 1.8204258402315572\n",
+      "[00m 19.0s (2 40%) 1.9521]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to bepting deser marcius waftly shut, your may to preed, you, with.\n",
+      "to be or not to be sthoun.\n",
       "\n",
-      "cominius:\n",
-      "you thou:\n",
-      "heard, madind, m\n"
+      "aupilg tory but blang.\n",
+      "\n",
+      "fiurfor sust,\n",
+      "erciors,\n",
+      "the agiard\n",
+      "the cester.\n",
+      "\n",
+      "hing the tor brojte\n",
+      "Epoch 4/5, Loss: 1.7804084676523177\n",
+      "[00m 25.3s (3 60%) 1.5967]\n",
+      "------------------------------------------------------------------------\n",
+      "to be or not to be seren s\n",
+      "poodius lied bus i hey dow, be hange the pare hanger not i varcy the no,\n",
+      "nos it deyes sencr\n",
+      "Epoch 5/5, Loss: 1.7546538143493116\n",
+      "[00m 31.6s (4 80%) 1.6567]\n",
+      "------------------------------------------------------------------------\n",
+      "to be or not to be masthing shoughld the ack hipn murtrous if tely, wars loverits are swisty\n",
+      "are rivery your priends, \n"
      ]
     }
    ],
@@ -393,10 +388,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "to be or not to bepetince this ance,\n",
-      "fut, and in hine\n",
-      "the comperce the my hl't buther, wherety,\n",
-      "speats the mores, and \n"
+      "to be or not to belies,\n",
+      "hese\n",
+      "in them,\n",
+      "thet'est shall shall you, wim, mepone. in't the made prace teliinicer hened yet,\n"
      ]
     }
    ],
@@ -471,10 +466,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "encoded = [\n",
-    "    token_mapping.token2index[char]\n",
-    "    for char in shakespeare_text\n",
-    "]"
+    "encoded = token_mapping.encode(shakespeare_text)"
    ]
   },
   {
@@ -596,26 +588,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 6.16962888351032\n",
-      "[00m 2.8s (0 0%) 5.1410]\n",
+      "Epoch 1/5, Loss: 6.228423463167065\n",
+      "[00m 2.7s (0 0%) 5.6661]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be ##her south let. : br soldier speak while'oak run some you assembly that ; good they you! hat girons beingach in.rio rather\n",
-      "Epoch 2/5, Loss: 5.364991634721593\n",
-      "[00m 5.6s (1 20%) 4.9285]\n",
+      "To be or not to be now om our'advanced in when evenrily, conducted, give ; not but you on tell relieve do eleven equal part a, youeness corn\n",
+      "Epoch 2/5, Loss: 5.539322401775351\n",
+      "[00m 5.4s (1 20%) 4.9891]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be ##uss let hearts. aidi i will retire of have, a goo rather,, to of have ; behind mills. far thousands they artpt\n",
-      "Epoch 3/5, Loss: 4.842905401893486\n",
-      "[00m 8.4s (2 40%) 4.1508]\n",
+      "To be or not to be have render i first within accuseus : so, to theia. brutus that and citizen : hat all come : your could any sick of hate\n",
+      "Epoch 3/5, Loss: 4.976599313916951\n",
+      "[00m 8.2s (2 40%) 4.9341]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be pray choice of slain, which remain i'll not threeers! theyinius : tell express vols to relieve fools a : nos, who\n",
-      "Epoch 4/5, Loss: 4.4670529794809015\n",
-      "[00m 11.2s (3 60%) 4.1122]\n",
+      "To be or not to be a verdict ; their the whip of to us to death nothing a fairness we sons : yet, mean a wills budge good after by and your flatius\n",
+      "Epoch 4/5, Loss: 4.561570403059614\n",
+      "[00m 10.9s (3 60%) 3.8148]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be des sp subjects have first citizen : less's er patricia for our hislanus : we shall, his which to mo. keepers. marcidi\n",
-      "Epoch 5/5, Loss: 4.1650441806681835\n",
-      "[00m 14.0s (4 80%) 3.8798]\n",
+      "To be or not to be one three than and they'soth, thanch to him : your cam fair ; so, yet, that from your husband ers ruth mad\n",
+      "Epoch 5/5, Loss: 4.245862440471232\n",
+      "[00m 13.7s (4 80%) 3.8920]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be must set their caps more the your lord of their disciplined. second better it hand patience confess, madam, my seem the af hours made, what we\n"
+      "To be or not to be coffin, inrtius on they did bury i call all : hehor you are to fa much and you prove must as is. first citizen :\n"
      ]
     }
    ],
@@ -657,7 +649,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To be or not to be carrythling can's their wholesomeaves, which like you : alone forth, his brows honour me the gentry horse a net, him alone\n"
+      "To be or not to be the chestsric less flameh as he another :nc, sir. messenger : i fool appear like their for man ; i's hate, but\n"
      ]
     }
    ],
