Allows unused tokens in initial text for text-gen
- Rename refrences to "index" to "id"
- Restructure token & ID mappings (to also handle `not found` tokens
- Some format spacing changes

--- a/exercise-3-name/solution/text-generation.ipynb
+++ b/exercise-3-name/solution/text-generation.ipynb
@@ -266,9 +266,9 @@
     ") -> str:\n",
     "    model.eval()\n",
     "    generated_text = input_str.lower()\n",
-    "    input_tensor = tokens_to_index_tensor(\n",
+    "    input_tensor = tokens_to_id_tensor(\n",
     "        tokens=input_str.lower(),\n",
-    "        token_index_mapping=character_mapping.token2index,\n",
+    "        token_id_mapping=character_mapping.token2id,\n",
     "    )\n",
     "    \n",
     "    with torch.no_grad():\n",
@@ -279,7 +279,7 @@
     "                dim=0,\n",
     "            )\n",
     "            next_char_idx = torch.multinomial(probabilities, 1).item()\n",
-    "            generated_text += character_mapping.index2token[next_char_idx]\n",
+    "            generated_text += character_mapping.id2token(next_char_idx)\n",
     "            input_tensor = torch.cat(\n",
     "                [\n",
     "                    input_tensor,\n",
@@ -307,45 +307,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 2.267284755661084\n",
-      "[00m 6.2s (0 0%) 2.2403]\n",
+      "Epoch 1/5, Loss: 2.2541460002192295\n",
+      "[00m 6.3s (0 0%) 1.9161]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to beinfeed, fases, fobven lat and reat's a marn's,\n",
-      "them your sil thusester the lent, we efirs and as i t\n",
-      "Epoch 2/5, Loss: 1.9004900568971237\n",
-      "[00m 12.7s (1 20%) 1.7704]\n",
-      "------------------------------------------------------------------------\n",
-      "to be or not to be toonsed forth?\n",
+      "to be or not to befiritize,\n",
+      "in spave nere sendeves.\n",
       "\n",
-      "aufinius:\n",
-      "be asingiemnien:\n",
-      "thouve sy, ble make all you dome,\n",
-      "you beter: he enow\n",
-      "how\n",
-      "Epoch 3/5, Loss: 1.8204258402315572\n",
-      "[00m 19.0s (2 40%) 1.9521]\n",
-      "------------------------------------------------------------------------\n",
-      "to be or not to be sthoun.\n",
+      "it.\n",
+      "hers as ank for of ar' the cormin to fartmorgite\n",
+      "ale,!\n",
       "\n",
-      "aupilg tory but blang.\n",
-      "\n",
-      "fiurfor sust,\n",
-      "erciors,\n",
-      "the agiard\n",
-      "the cester.\n",
-      "\n",
-      "hing the tor brojte\n",
-      "Epoch 4/5, Loss: 1.7804084676523177\n",
-      "[00m 25.3s (3 60%) 1.5967]\n",
+      "ceave\n",
+      "Epoch 2/5, Loss: 1.900958567381667\n",
+      "[00m 12.7s (1 20%) 1.7791]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be seren s\n",
-      "poodius lied bus i hey dow, be hange the pare hanger not i varcy the no,\n",
-      "nos it deyes sencr\n",
-      "Epoch 5/5, Loss: 1.7546538143493116\n",
-      "[00m 31.6s (4 80%) 1.6567]\n",
+      "to be or not to bettiect it you mole. deard a lije. belidicen anethe baming of seve gontsgen;\n",
+      "if i pporet le repiegks \n",
+      "Epoch 3/5, Loss: 1.8191880360198096\n",
+      "[00m 19.0s (2 40%) 1.8707]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be masthing shoughld the ack hipn murtrous if tely, wars loverits are swisty\n",
-      "are rivery your priends, \n"
+      "to be or not to bestatlook,\n",
+      "tho aufithel,\n",
+      "then leed, blten hear veild fresenif endich your not chaj marcius,\n",
+      "whin upan\n",
+      "Epoch 4/5, Loss: 1.7777214188926136\n",
+      "[00m 25.4s (3 60%) 1.7408]\n",
+      "------------------------------------------------------------------------\n",
+      "to be or not to beaml peting!\n",
+      "\n",
+      "valadl us.\n",
+      "\n",
+      "virgilies most very heiren, first maset roine i to to to our hiser, thous: \n",
+      "Epoch 5/5, Loss: 1.7507283979330581\n",
+      "[00m 31.8s (4 80%) 1.8123]\n",
+      "------------------------------------------------------------------------\n",
+      "to be or not to bellow where you decoy lencurs shur not pone i srome of, the peores habe\n",
+      "the pick fwase your cormons.\n",
+      "\n"
      ]
     }
    ],
@@ -388,10 +386,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "to be or not to belies,\n",
-      "hese\n",
-      "in them,\n",
-      "thet'est shall shall you, wim, mepone. in't the made prace teliinicer hened yet,\n"
+      "to be or not to be ascome of mother looks poblangh: i comcush is truith to blear\n",
+      "spefigh let the pevencaine hosegs tha\n"
      ]
     }
    ],
@@ -544,9 +540,9 @@
     ") -> str:\n",
     "    model.eval()\n",
     "    tokenized_text = tokenize_text(tokenizer=tokenizer, text=input_str)\n",
-    "    input_tensor = tokens_to_index_tensor(\n",
+    "    input_tensor = tokens_to_id_tensor(\n",
     "        tokens=tokenized_text,\n",
-    "        token_index_mapping=token_mapping.token2index,\n",
+    "        token_id_mapping=token_mapping.token2id,\n",
     "    )\n",
     "\n",
     "    generated_text = []\n",
@@ -558,7 +554,7 @@
     "                dim=0,\n",
     "            )\n",
     "            next_token_idx = torch.multinomial(probabilities, 1).item()\n",
-    "            generated_text.append(token_mapping.index2token[next_token_idx])\n",
+    "            generated_text.append(token_mapping.id2token(next_token_idx))\n",
     "            input_tensor = torch.cat(\n",
     "                [\n",
     "                    input_tensor,\n",
@@ -588,26 +584,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 6.228423463167065\n",
-      "[00m 2.7s (0 0%) 5.6661]\n",
+      "Epoch 1/5, Loss: 6.226631400068891\n",
+      "[00m 2.7s (0 0%) 5.7415]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be now om our'advanced in when evenrily, conducted, give ; not but you on tell relieve do eleven equal part a, youeness corn\n",
-      "Epoch 2/5, Loss: 5.539322401775351\n",
-      "[00m 5.4s (1 20%) 4.9891]\n",
+      "To be or not to be all them this :eni. he ascent first i i hatred to aug yo sin ; heus the for iny and this : world, thy health\n",
+      "Epoch 2/5, Loss: 5.521150141156793\n",
+      "[00m 5.4s (1 20%) 5.2638]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be have render i first within accuseus : so, to theia. brutus that and citizen : hat all come : your could any sick of hate\n",
-      "Epoch 3/5, Loss: 4.976599313916951\n",
-      "[00m 8.2s (2 40%) 4.9341]\n",
+      "To be or not to be following make further is he's, meneni i would his hire the midst of, nor, but if,usus them for declinesen,\n",
+      "Epoch 3/5, Loss: 4.981049624672772\n",
+      "[00m 8.2s (2 40%) 4.5309]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be a verdict ; their the whip of to us to death nothing a fairness we sons : yet, mean a wills budge good after by and your flatius\n",
-      "Epoch 4/5, Loss: 4.561570403059614\n",
-      "[00m 10.9s (3 60%) 3.8148]\n",
-      "------------------------------------------------------------------------\n",
-      "To be or not to be one three than and they'soth, thanch to him : your cam fair ; so, yet, that from your husband ers ruth mad\n",
-      "Epoch 5/5, Loss: 4.245862440471232\n",
-      "[00m 13.7s (4 80%) 3.8920]\n",
-      "------------------------------------------------------------------------\n",
-      "To be or not to be coffin, inrtius on they did bury i call all : hehor you are to fa much and you prove must as is. first citizen :\n"
+      "To be or not to be beat la : so, i drop in souledly as both the point hastyole you aates them,. be citizen, hector of whereby?\n"
      ]
     }
    ],
@@ -642,14 +630,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To be or not to be the chestsric less flameh as he another :nc, sir. messenger : i fool appear like their for man ; i's hate, but\n"
+      "To be or not to be warm both : withwil, if he an become place company your oaks offe. first officer : may peace there, to say news. brutus\n"
      ]
     }
    ],
@@ -683,8 +671,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.12"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
