Small comments about training & evaluation modes

--- a/exercise-3-name/solution/text-generation.ipynb
+++ b/exercise-3-name/solution/text-generation.ipynb
@@ -264,6 +264,7 @@
     "    num_chars: int = 100,\n",
     "    temperature: float = 1.0,\n",
     ") -> str:\n",
+    "    # Set model into \"evaluation mode\" (deactivates things like Dropout layers)\n",
     "    model.eval()\n",
     "    generated_text = input_str.lower()\n",
     "    input_tensor = tokens_to_id_tensor(\n",
@@ -353,6 +354,7 @@
     "\n",
     "start = start_time()\n",
     "for epoch in range(epochs):\n",
+    "    # Set model into \"training mode\"\n",
     "    model.train()\n",
     "    total_loss = 0\n",
     "    for X_batch, y_batch in train_loader:\n",
@@ -538,6 +540,7 @@
     "    num_tokens: int = 100,\n",
     "    temperature: float = 1.0,\n",
     ") -> str:\n",
+    "    # Set model into \"evaluation mode\" (deactivates things like Dropout layers)\n",
     "    model.eval()\n",
     "    tokenized_text = tokenize_text(tokenizer=tokenizer, text=input_str)\n",
     "    input_tensor = tokens_to_id_tensor(\n",
@@ -595,7 +598,15 @@
       "Epoch 3/5, Loss: 4.981049624672772\n",
       "[00m 8.2s (2 40%) 4.5309]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be beat la : so, i drop in souledly as both the point hastyole you aates them,. be citizen, hector of whereby?\n"
+      "To be or not to be beat la : so, i drop in souledly as both the point hastyole you aates them,. be citizen, hector of whereby?\n",
+      "Epoch 4/5, Loss: 4.55870046290748\n",
+      "[00m 11.1s (3 60%) 4.3171]\n",
+      "------------------------------------------------------------------------\n",
+      "To be or not to be tar shall of the wounds and clubs theire : if you. and driven to tell are at with om your necks! care the yarn fool naked\n",
+      "Epoch 5/5, Loss: 4.221116675077564\n",
+      "[00m 13.9s (4 80%) 4.4031]\n",
+      "------------------------------------------------------------------------\n",
+      "To be or not to be ##see coriolanus : it 'ble let, you'they doors addition and titus of himth!, is not with us lie, the\n"
      ]
     }
    ],
@@ -604,6 +615,7 @@
     "\n",
     "start = start_time()\n",
     "for epoch in range(epochs):\n",
+    "    # Set model into \"training mode\"\n",
     "    model.train()\n",
     "    total_loss = 0\n",
     "    for X_batch, y_batch in train_loader:\n",
@@ -630,14 +642,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To be or not to be warm both : withwil, if he an become place company your oaks offe. first officer : may peace there, to say news. brutus\n"
+      "To be or not to be obey ; well of out'tis bent marcius : has yetsome believe your hideh achieved which ouraves in a lamb'd. men his\n"
      ]
     }
    ],
